Add Resend email integration for user account operations
Introduced `IdentityResendClient` to handle email sending for account confirmation, password resets, and reset codes using Resend. Updated DI container configuration to register Resend services and revised environment variables in `appsettings.json` for API token and database connection string. Added the Resend package to project dependencies.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,11 @@
 {
-  "ConnectionStrings": {
-    "PostgresConnectionString": "Host=mainline.proxy.rlwy.net;Port=14528;Username=postgres;Password=zPxEKWOxQhdIAaEDyiMdGzLAwkGYADXx;Database=railway"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RESEND_APITOKEN": "",
+  "DB_CONNECTION_STRING": ""
 }
