--- a/UrlSamurai.csproj
+++ b/UrlSamurai.csproj
@@ -19,6 +19,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.13" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="Resend" Version="0.1.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
     </ItemGroup>
 
 </Project>
