--- a/UrlSamurai.csproj
+++ b/UrlSamurai.csproj
@@ -18,8 +18,21 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.13" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.13" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="QRCoder" Version="1.6.0" />
         <PackageReference Include="Resend" Version="0.1.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\bower.json" />
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\index-svg.html" />
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\index.html" />
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\index.svg" />
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\jquery.min.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\LICENSE" />
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\qrcode.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\qrcode.min.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\qrcode\README.md" />
     </ItemGroup>
 
 </Project>
