--- a/UrlSamurai.csproj
+++ b/UrlSamurai.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MaxMind.GeoIP2" Version="5.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.13" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
@@ -33,6 +34,12 @@
       <_ContentIncludedByDefault Remove="wwwroot\qrcode\qrcode.js" />
       <_ContentIncludedByDefault Remove="wwwroot\qrcode\qrcode.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\qrcode\README.md" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="GeoLite2-Country.mmdb">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
