--- a/UrlSamurai.csproj
+++ b/UrlSamurai.csproj
@@ -21,7 +21,9 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="QRCoder" Version="1.6.0" />
         <PackageReference Include="Resend" Version="0.1.2" />
+        <PackageReference Include="StackExchange.Redis" Version="2.8.37" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+        <PackageReference Include="Telegram.Bot" Version="22.5.1" />
     </ItemGroup>
 
     <ItemGroup>
