refactored components to services

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "RESEND_APITOKEN": "re_QESpyM92_DNhGFvW7CiyiEhKz3cynrD3E",
+  "DB_CONNECTION_STRING": "Host=mainline.proxy.rlwy.net;Port=14528;Username=postgres;Password=zPxEKWOxQhdIAaEDyiMdGzLAwkGYADXx;Database=railway",
+  "TelegramBotToken": "7881232561:AAGmmynxPCROhdG2Zx18jm51PZOw8ywuO6o",
+  "REDIS_PUBLIC_URL": "redis://default:ddGkFoekGhuQjybqyLsaWTaCsHRwCgPZ@yamabiko.proxy.rlwy.net:44242"
 }
